<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_top"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo_coloured"

        app:layout_constraintTop_toTopOf="@+id/ivTop"
        app:layout_constraintBottom_toTopOf="@+id/ivActivity"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/ivActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_activity"

        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintBottom_toTopOf="@+id/tvBestTracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tvBestTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/label_bestTracker"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvStudents"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tvStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_students"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@+id/tvBestTracker"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        tools:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/primaryButton"
        android:text="@string/label_register"
        android:layout_marginTop="35dp"

        app:layout_constraintTop_toBottomOf="@id/tvStudents"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:paddingTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_alreadyLogin"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:rippleColor="@android:color/transparent"
        tools:ignore="TouchTargetSizeCheck"

        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>