<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMyDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        app:navigationIcon="@drawable/ic_arrow_primary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <TextView
                android:id="@+id/tvMyDistance"
                style="@style/blackHeader24"
                android:layout_marginTop="24dp"
                android:text="14.32 км" />

            <TextView
                android:id="@+id/tvMyEnd"
                style="@style/greyText16"
                android:text="14 часов назад" />

            <TextView
                android:id="@+id/tvMyTime"
                style="@style/blackHeader24"
                android:layout_marginTop="24dp"
                android:text="1 ч 42 мин" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMyStartLabel"
                    style="@style/blackText16"
                    android:text="@string/label_startLabel" />

                <TextView
                    android:id="@+id/tvMyStartTime"
                    style="@style/greyText16"
                    android:layout_marginStart="8dp"
                    android:text="14:49" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tvMyEndLabel"
                    style="@style/blackText16"
                    android:text="@string/label_endLabel" />

                <TextView
                    android:id="@+id/tvMyEndTime"
                    style="@style/greyText16"
                    android:layout_marginStart="8dp"
                    android:text="16:31" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMyComment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieMyComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_comment"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>